Fixed header clipping through itself

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,10 +48,15 @@ https://paletton.com/#uid=40l0D1kcw9H7M2q9q5ngqeSkgk7kczbi6H0n8C4KjgkwqpuckgyhKh
     --monospace-font: 'Cutive Mono', monospace;;
 
     /* Padding and Spacing */
-    --sm-pad: 20px;
-    --med-pad: 50px;
-    --lg-pad: 100px;
-    --xlg-pad: 200px;
+    --sm-pad: 10px;
+    --med-pad: 20px;
+    --lg-pad: 50px;
+    --xlg-pad: 100px;
+
+    --sm-space: 2vw;
+    --med-space: 4vw;
+    --lg-space: 8vw;
+    --xlg-space: 10vw;
 }
 
 /* =================================================
@@ -70,25 +75,32 @@ Header CSS
 
 #header-banner {
     position: relative;
-    background-image: url('../images/wood-panel.jpg');
+    background-image: url('../images/field.jpg');
+    background-size: cover;
+    background-position: center;
     font-family: var(--header-font);
-    color: var(--brown-darkest);
+    color: var(--light-mono);
     width: 100%;
     height: 600px;
 }
 
-/* This gradient overlays the wood panel background, smoothing the transition to the page background color */
+/* This gradient overlays the header background, smoothing the transition to the page background color */
 .fade-wrapper {
-    background: linear-gradient(rgba(0, 0, 0, 0), 80%, var(--brown-darkest));
+    background: linear-gradient(rgba(0, 0, 0, 0), 70%, var(--brown-darkest));
     width: 100%;
     height: 100%;
 }
 
 .bear-logo {
     position: absolute;
-    left:var(--xlg-pad);
+    left: 20%;
     top:var(--lg-pad);
     transform: rotate(-12deg);
+}
+
+.bear-logo img {
+    width:20vw;
+    max-width: 300px;
 }
 
 .bear-name {
@@ -96,8 +108,8 @@ Header CSS
 }
 
 #header-banner h1 {
+    display:inline;
     font-family: var(--header-font);
-    padding-left: 400px;
     padding-top: var(--xlg-pad);
     font-size:60px;
 }
@@ -141,7 +153,7 @@ Main Content Section CSS
 
 .card-header {
     display: flex;
-    flex-grow: 1;
+    width: 300px;
     padding-top: var(--med-pad);
     padding-left: var(--sm-pad);
     padding-right: var(--sm-pad);
@@ -193,7 +205,7 @@ Small Screen Media Query
     .bear-logo {
         position:static;
         transform: unset;
-        margin-top:var(--med-pad);
+        /* margin-top:var(--med-pad); */
     }
 
     /* Makes main content flow into a column instead of side by side with headers */
